--- a/Oppskrifter.html
+++ b/Oppskrifter.html
@@ -686,16 +686,16 @@
     <p>Dag 1 veier man opp frø i bakbollen. Kok vann, og hell over frøene. Vent til kaldt. Ha i resten av ingrediensene.
         Man trenger ikke kna/kjøre deigen, bare blande ingrediensene. La stå på kjøkkenbenken i 12-24 timer.
 
-        Dag 2 blandes resten av ingrediensene inn. Bland gjerne inn gjære først, så den blir godt spredt i deigen.
+        Dag 2 blandes resten av ingrediensene inn. Bland gjerne inn gjær først, så den blir godt spredt i deigen.
         Deigen knas godt. Omtrent 10 min i maskin er passe. La den så stå i omtrent to timer, eller til doblet i
-        størrelse. Så kan den slås ned og has i smurte former (den er for løs til å bake på frihånd). Særg for at
-        overflatern er melete og dekk med plast. Sett pizzastål på nest laveste rille i ovnen og sett den på på 250
+        størrelse. Så kan den slås ned og has i smurte former (den er for løs til å bake på frihånd). Sørg for at
+        overflaten er melete og dekk med plast. Sett pizzastål på nest laveste rille i ovnen og sett den på på 250
         &deg; C. Vent omtrent en time, til stålet er varmt og brødene hevet. Sett et ovnsbrett nederst. Kok en kopp vann
-        og sleng i samtridig med at brødene settes inn. Sett ned temperaturen til rundt 200 &deg; C etter omtrent et
+        og sleng i samtidig med at brødene settes inn. Sett ned temperaturen til rundt 200 &deg; C etter omtrent et
         kvarter, og la stå omtrent en halvtime til. De skal være godt stekt utenpå og litt over 96 &deg; C inni.
     </p>
     <h4>Erfaringer</h4>
-    <p>Man kan slumpe og justere som man føler for.
+    <p>Man kan slumpe og justere som man føler for. På dag 2 bør man justere med vann og mel til konsistensen er passelig. 
     </p>
 
 </body>
