Forenklet blomkpl-quinoa-oppskriften

--- a/Oppskrifter.html
+++ b/Oppskrifter.html
@@ -210,29 +210,26 @@
     <h3 id="Quinoa-salat med blomkål">Quinoa-salat med blomkål</h3>
     <h4>Ingredienser</h4>
     <ul>
-        <li>690 gr. vann</li>
         <li>200 gr. quinoa</li>
-        <li>500 gr blomkåltopper (1 stor blomkål) </li>
-        <li>72 gr. finkuttet grønt, surt eple</li>
+        <li>1 stor blomkå </li>
+        <li>1 grønt, surt eple</li>
         <li>40 gr. pinjekjerner</li>
         <li>40 gr. persilleblader</li>
-        <li>35 gr. selleri</li>
+        <li>1 stang selleri</li>
         <li>35 gr. hvit blasamico</li>
         <li>35 gr. olivenolje</li>
         <li>34 gr. tørket rips (eller andre syrlige bær)</li>
-        <li>16 gr. macadamiaolje (eller annen nøtteolje)</li>
+        <li>15 gr. macadamiaolje (eller annen nøtteolje)</li>
         <li>sitron</li>
     </ul>
     <h4>Fremgangsmåte</h4>
-    <p>Kok quinoa i trykkoker. 4 min fra trykk oppnås. Kjør rask ned. Shave av toppene på blomkålen. Oppskriften oppgir
-        at man trenger 160 gr. Skal være på størrelse med grus. Bland med øvrige ingredienser og server.
+    <p>Kok quinoa i rikelig med saltet vann. Sil av når ferdig, og skyll ev med kaldt vann. La renne av før den blandes med resten. Shave i mellomtiden av toppene på blomkålen. Skal være på størrelse med grus. Rist pinjekjernene i tørr panne. Finhakk og bland øvrige ingredienser. Smak til og server. 
     </p>
     <h4>Erfaringer</h4>
-    <p>Selv om oppsriften er nøyaktig, kan man slunmpe på mengdeforholdene. Sidne trykkokeren bruker lang tid på å komme
-        opp til trykk, kan quinoaen bli overkokt med denne metoden.
+    <p> God i romtemperatur, god kald. Holder en dag eller tre i kjøleskap. Øk mengden quinoa for å gjøre mer mettende. Mengdeforhold kan tas på slump. 
     </p>
     <h4>Kilde</h4>
-    <p>Modernist Cuisine at Home, s. 170.
+    <p>Tilpasset fra Modernist Cuisine at Home, s. 170.
     </p>
 
     <h2 id="Fisk og sjømat">Fisk og sjømat</h2>
