Lagt inn ny pizzadeig og hvit pizza

--- a/Oppskrifter.html
+++ b/Oppskrifter.html
@@ -96,6 +96,8 @@
             </li>
             <ul>
                 <li><a href="#Rask pizzadeig">Rask pizzadeig</a></li>
+                <li><a href="#Pizzadeig på poolish">Pizzadeig på poolish</a></li>
+                <li><a href="#Hvit potetpizza">Hvit potetpizza</a></li>
             </ul>
             <li><a href="#Annet_middag">Annet</a></li>
             <ul>
@@ -442,7 +444,50 @@
         </p>
         <h4>Kilde</h4>
         <p>Modernist Cuisine at Home, boka. Også på <a href="http://modernistcuisine.com/recipes/neapolitan-pizza-dough/">nett</a>  </p>
+        <h3 id="Pizzadeig på poolish">Pizzadeig på poolish</h3>
+        <h4>Ingredienser (gir 4 pizzer)</h4>
+        <p>Totalt:</p>
+        <ul>
+            <li>650 gr siktet hvetemel, gjerne tipo 00 </li>
+            <li>30 gr gluten </li>
+            <li>17 gr salt </li>
+            <li>10 gr honning </li>
+            <li>1/2 pk tørrgjær </li>
+            <li>410 gr vann</li>
+        </ul>
+        <p>Dag 1:</p>
+        <ul>
+            <li>300 gr siktet hvetemel, gjerne tipo 00 </li>
+            <li>30 gr gluten </li>
+            <li>10 gr salt </li>
+            <li>10 gr honning </li>
+            <li>dryss tørrgjær </li>
+            <li>330 gr vann</li>
+        </ul>
+        <p>Dag2</p>
+        <ul>
+            <li>350 gr siktet hvetemel, gjerne tipo 00 </li>
+            <li>7 gr salt </li>
+            <li>resterende tørrgjær </li>
+            <li>80 gr vann</li>
+        </ul>
+    
+        <h4>Fremgangsmåte</h4>
+        <p>Bland deigen løselig sammen på dag 1, for hånd. La stå tildekket i plast til dagen etter. Bland i resten av ingrediensene og elt godt. Den bør slippe kantene på bollen og bare være litt klissete. La heve en time eller to, til omtrent dobbel størrelse. Del i fire emner, hver på omtrentlig 250 gr. Kna ut i boller, bruk olje om det trengs. Legg i hver sin oljede bolle og dekk i plast. La heve en times tid, strekk ut og stek. Deigen kan settes i kjøleskap noen dager både som poolish, rett etter miksing andre dag eller etter første heving, når man deler i individuelle emner. </p>
 
+        <h3 id = "Hvit potetpizza">Hvit potetpizza</h3>
+        <h4>Ingredienser</h4>
+        <ul>
+            <li>4-5 vanlige poteter</li>
+            <li>1 rosmarinplante</li>
+            <li>hvitløk</li>
+            <li>creme fraiche</li>
+            <li>tørr mozarella</li>
+            <li>ande- eller kyllingfett (kan droppes)</li>
+            <li>honning</li>
+        </ul>
+        <h4>Fremgangsmåte</h4>
+        <p>Skjær potetene i tynne skiver på mandolin, omtrent som tykkelsen på en fyrstikk. Kok i 6 minutter. Ha over i dørslag og skyll i kaldt vann. Legg utover på tørkepapir så de tørker. Surr rikelig med rosmarin og hvitløk sammen med andedett, kyllingfett eller god olivenolje. Bland inn potetene og sørg for at de er helt dekket av fett. Smør creme fraiche på pizzabunnen. Salt litt. Ha på tørr, strimlet mozarella, men mindre enn på andre pizzaer. Legg potetskivene i delvis overlappende lag. Rosmarinbitene bør under potetene, ellers svir de seg. Hell over det fettet som ev er igjen. Stek. Ta p litt honning og rikelig med salt før servering, kanskje også litt fersk rosmarin.</p>
     <h2 id="Annet_middag">Annet</h2>
     <h3 id="Pad thai">Pad thai</h3>
     <h4>Ingredienser</h4>
