La inn pannekaker

--- a/Oppskrifter.html
+++ b/Oppskrifter.html
@@ -102,6 +102,7 @@
             </ul>
             <li><a href="#Annet_middag">Annet</a></li>
             <ul>
+                <li><a href="#Fylte pannekaker">Fylte pannekaker</a></li>
                 <li><a href="#Kylling og ris">Kylling og ris</a></li>
                 <li><a href="#Pad thai">Pad thai</a></li>
                 <li><a href="#Lammekjøttboller med yoghurt-saus">Lammekjøttboller med yoghurt-saus</a></li>
@@ -517,6 +518,36 @@
         <h4>Fremgangsmåte</h4>
         <p>Skjær potetene i tynne skiver på mandolin, omtrent som tykkelsen på en fyrstikk. Kok i 6 minutter. Ha over i dørslag og skyll i kaldt vann. Legg utover på tørkepapir så de tørker. Surr rikelig med rosmarin og hvitløk sammen med andedett, kyllingfett eller god olivenolje. Bland inn potetene og sørg for at de er helt dekket av fett. Smør creme fraiche på pizzabunnen. Salt litt. Ha på tørr, strimlet mozarella, men mindre enn på andre pizzaer. Legg potetskivene i delvis overlappende lag. Rosmarinbitene bør under potetene, ellers svir de seg. Hell over det fettet som ev er igjen. Stek. Ta p litt honning og rikelig med salt før servering, kanskje også litt fersk rosmarin.</p>
     <h2 id="Annet_middag">Annet</h2>
+    <h3 id="Fylte pannekaker">Fylte pannekaker</h3>
+    <h4>Ingredienser</h4>
+    Pannekakene:
+    <ul>
+        <li>60 gr smør</li>
+        <li>300 gr siktet hvetemel</li>
+        <li>600 gr helmelk</li>
+        <li>6 gr salt</li>
+        <li>3-4 store egg</li>
+    </ul>
+    Fyllet:
+    <ul>
+        <li>4 fedd hvitløk</li>
+        <li>1 stor løk</li>
+        <li>1 pakke frossen spinat</li>
+        <li>1-2 pakker fetaost m hvitløk</li>
+        <li>Cottage cheese</li>
+        <li>ev annen ost</li>
+        <li>Salt, pepper, muskat, hvitvinseddik</li>
+    </ul>
+    <h4>Fremgangsmåte</h4>
+    <p>Pannekaker: Smelt smøret. Mål opp alle ingrediensene rett i blenderen, melk først. Bland. La stå i minimum en halvtime, gjerne lenger. 
+    </p>
+    <p>Fyll: Kutt og surr løk og hvitløk, ha i spinat. La den  slippe vannet og kok inn til passelig. Krydre. Ha i ostene like før servering.</p>
+    <h4>Erfaringer</h4>
+    <p>4 egg øker proteininnholdet og gjør at pannekakene henger fint sammen. Men de blir litt omelettaktige og slippe rikk eut luft, slik at det under steking dannes dampbobler. Prøv tre egg for å unngå  dette. 
+    </p>
+    <h4>Kilde</h4>
+    <p>Tine
+    </p>
     <h3 id="Kylling og ris">Kylling og ris</h3>
     <h4>Ingredienser</h4>
     <ul>
