--- a/Oppskrifter.html
+++ b/Oppskrifter.html
@@ -1304,6 +1304,14 @@
     <h4>Erfaringer</h4>
     <p>Mengdene er kan varieres og tas på slump.
     </p>
+<h3 id="Pølser">Pølser</h3>
+<h4>Ingredienser</h4>
+<ul>
+    <li>Innmatpølser</li>
+    <li>Medisterpølser</li>
+</ul>
+<h4>Fremgangsmåte</h4>
+<p>Prikk pølsene. Stek på moderat varme i stekepanne eller i ovn til gjennomvarme. </p>
     <h2 id="#Julefrokost">Julefrokost</h2>
     <p>I 2021 hadde vi med i brødkurven med seks personer til bords
     <ul>
