--- a/Ønskeliste.html
+++ b/Ønskeliste.html
@@ -1,1 +1,52 @@
-TEST
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Ønskeliste</title>
+    <p>Oppdatert per 12.03.2023</p>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+</head>
+
+<body>
+    <h1>Greier til sykkel</h1>
+    Siden jeg bruker mye tid på sykkelen nå for tiden, er det en del utstyr jeg godt kan tenke meg til den. Det er for
+    eksempel:
+    <ul>
+        <li> Et selvstående mekkestativ ville gjort det både lettere og mer komfortabelt å både rengjøre og vedlikeholde
+            sykkelen. For eksempel <a
+                href="https://bikeshop.no/park-tool/ptpcs93/park-tool-pcs-93-mekkestativ-bl%C3%A5-foldbart-7-2-kg">dette</a>.
+            Her er det sikkert mange andre modeller som gjør samme nytten.</li>
+        <li> Vi har ikke uttak for vann på forsida av huset. Det gjør det litt krøkkete med vask av sykkel. Noe så
+            enkelt som å få møkkete områder våte og å skylt av etter vask blir vrient. Andre i samme situasjon har
+            anbefalt en enkel 8l Trykksprøyte fra biltema: <a
+                href="https://www.biltema.no/fritid/hage/hageredskaper/trykksproyter/trykksproyte-8-l-2000030844">Denne.</a>
+        </li>
+        <li> Stort sett trenger man ikke noen GPS-gadgets til sykkelturer, bortsett fra at jeg bruker mobilen til å telle kilometer ol. Men av og til kunne det vært gøy å se en løpende oversikt over hvor fort man sykler, eller (viktigere) å kunne se et kart. Hvis man skal prøve nye ruter man har plottet på et kart i forkant, er det fint å ha dem synlig på styret. Jeg tror det er bedre å bruke mobilen enn å kjøpe en separat dings. Men da trenger man en måte å feste den i styret. Det ser ut til at den vanligste modellen for dette er en Quadlock Mobilholder til sykkel. Man trenger én del som festes til styret og én del som fester mobilen til denne. Sistnevnte er spesifikk for den mobiltelefonen man har. Jeg har en Samsung s22.  </li>
+        <li> Vanlig treningstøy funker helt fint til sykling, men det er sikkert en grunn til at alle som sykler mye bruker sykkeklær. Ønsker meg derfor shorts og bukse. Det ser ut til at de fleste foetrekker bib-shorts og bib-bukser, altså med bukseseler. Som f.eks. <a href="https://bikeshop.no/sykkelbekledning/kl%C3%A6r?Filter=1091%C2%A41:1091%C2%A41_Herrer%7CPrdGruppeLev2ID%C2%A41:PrdGruppeLev2ID%C2%A41_810%7C1101%C2%A41:1101%C2%A41_Bibshorts">disse</a>. Jeg er usikker på om det er en fordel med padding eller ikke, og har ingen formening om ulike merker e.l. </li>
+        <li> Lappesaker er heldigvis sjelden nødvendig, men er definitivt noe man burde ha med seg eller i det minste liggende hjemme. </li>
+        <li> Tilsvarende kan det være kjekt å ha eller ha med seg enkle verktøy. Det selges en del multiverktøy for sykkel som minner om lommekniver. De er lette nok til at de kan tas med på tur, og det er uansett greit å flere typer nøkler ol samlet på et sted. Det er altså et <a href="https://www.bikeradar.com/advice/buyers-guides/best-multi-tool/">slikt</a> jeg ønsker meg. </li>
+    </ul>
+    <h1>Mat og drikke</h1>
+    <ul>
+        <li>Jeg har lenge irritert meg over eltekroken til kjøkkenmaskinen. Den elter ikke ordentlig og driver mest og
+            snurrer deigen rundt og rundt. Det viser seg at mange andre har samme irritasjon, og at Kenwood lagr en
+            annen krok folk er mye mer fornøyde med. Det er <a
+                href="https://brondum.no/deigkrok-til-kenwood-kjoekkenmaskin-kw711659">denne</a>. </li>
+        <li>Isbitformene vi har er, vel, irriterende dårlige. De er i stiv hardplast og vanskelig å få isbitene ut av. De har ikke lokk, så de får lett smak av fryser og isbitene fordamper over tid. Gode silikonformer med lokk vil gjøre det lettere. Jeg ønsker meg både noen som lager ganske store isbiter, for eksempel <a href="https://traktoren.no/ice-former-til-terninger-4x4-cm">disse</a>, og noen som lager mindre isbiter. Store isbiter ser bedre ut i glasset, mens små kan knuses i blenderen.</li>
+        <li>I samme leia har vi ikke noen former til ispinner, og fra nå av bør vi alltid ha noen hjemmelagde ispinner tilgjengelig i fryseren. Ønsker meg for eksempel <a href="https://bakerenogkokken.no/bakeutstyr/iskremformer/lekue-isform-stabelbar-4-pk/">disse</a>.</li>
+            <li>En flaske vin slå sjelden feil.</li>
+        <li>Av morsommere gadgets ønsker jeg meg en Searzall Pro, med en Bernz-O-Matic TS8000 brenner. Sistnevnte er rett og slett en kraftig gassbrenner. Førstnevnte er en slags metallskjerm man har foran flammen, som bidrar til at varmen spres mer og at gassen forbrenner bedre slik at man slipper den karakteristiske gassmaken. Det blir som en veldig sterk creme brulee-brenner, som man kan bruke f.eks. til å få stekeskorpe på kjøtt og fisk. Finnes normalt <a href="https://www.indiegogo.com/projects/searzall-pro#/">her</a>, men i skrivende stund ser det ut til at det ikke er mulig å bestille.</li>
+    </ul>
+    <h1>Opplevelser</h1>
+    <ul>
+        <li>Restaurantbesøk er stort sett den typen opplevelse jeg er mest interessert i. Tidligere har det vært
+            vanskelig å få dette i gave, iallfall i form av gavekort. Men nå har mange fine restauranter funnet sammen i
+            en felles gavekortordning, <a href="https://givn.no/gavekort/oslo/restaurant">Givn</a>.</li>
+    </ul>
+    <!-- <script src="index.js"></script> -->
+</body>
+
+</html>
