--- a/Ønskeliste.html
+++ b/Ønskeliste.html
@@ -46,6 +46,11 @@
             vanskelig å få dette i gave, iallfall i form av gavekort. Men nå har mange fine restauranter funnet sammen i
             en felles gavekortordning, <a href="https://givn.no/gavekort/oslo/restaurant">Givn</a>.</li>
     </ul>
+    <h1>Annet</h1>
+    <ul>
+        <li>Headsettet mitt ser ut til å ta kvelden snart. Det bruker jeg nesten døgnet rundt, så da trenger jeg et nytt. Det jeg har er Marshall Major IV. Jeg har vært fornøyd med det. Jeg trenger at det er trådløst og foretrekker de som kalles "on ear", altså sånne som sitter utenpå øret - verken propper eller de veldig store som omslutter øret fullstendig. Jeg er ikke kresen på lydkvalitet og trenger ikke noe støykansellering eller lignende.  </li>
+    </ul>
+
     <!-- <script src="index.js"></script> -->
 </body>
 
