--- a/Ønskeliste.html
+++ b/Ønskeliste.html
@@ -6,35 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ønskeliste</title>
-    <p>Oppdatert per 10.02.2024</p>
+    <p>Oppdatert per 18.03.2024</p>
     <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
     <h1>Greier til sykkel</h1>
-    Siden jeg bruker mye tid på sykkelen nå for tiden, er det en del utstyr jeg godt kan tenke meg til den. Det er for
-    eksempel:
+    Siden jeg bruker mye tid på sykkelen nå for tiden, er det en del utstyr jeg godt kan tenke meg til den. Det er for eksempel:
     <ul>
         <li> Treningstøyet jeg bruker mest er utslitt. Standard Swix (eller lignende) jakke og bukse, bortimot vindtett, gjerne nettingfor i jakke. Typisk sånt man bruker til både treningstur på ski og til sykling høst og vinter.</li>
         <li> Verktøyskrinet er ikke helt komplett. Kjekke verktøy å ha er kjedepisk og kasettavdrager</li>
-        <li> Stort sett trenger man ikke noen GPS-gadgets til sykkelturer, bortsett fra at jeg bruker mobilen til å telle kilometer ol. Men av og til kunne det vært gøy å se en løpende oversikt over hvor fort man sykler, eller (viktigere) å kunne se et kart. Hvis man skal prøve nye ruter man har plottet på et kart i forkant, er det fint å ha dem synlig på styret. Jeg tror det er bedre å bruke mobilen enn å kjøpe en separat dings. Men da trenger man en måte å feste den i styret. Det ser ut til at den vanligste modellen for dette er en Quadlock Mobilholder til sykkel. Man trenger én del som festes til styret og én del som fester mobilen til denne. Sistnevnte er spesifikk for den mobiltelefonen man har. Jeg har en Samsung s22.  </li>
+        <li> Stort sett trenger man ikke noen GPS-gadgets til sykkelturer, bortsett fra at jeg bruker mobilen til å telle kilometer ol. Men av og til kunne det vært gøy å se en løpende oversikt over hvor fort man sykler, eller (viktigere) å kunne se et kart.
+            Hvis man skal prøve nye ruter man har plottet på et kart i forkant, er det fint å ha dem synlig på styret. Jeg tror det er bedre å bruke mobilen enn å kjøpe en separat dings. Men da trenger man en måte å feste den i styret. Det ser ut til
+            at den vanligste modellen for dette er en Quadlock Mobilholder til sykkel. Man trenger én del som festes til styret og én del som fester mobilen til denne. Sistnevnte er spesifikk for den mobiltelefonen man har. Jeg har en Samsung s22. </li>
     </ul>
     <h1>Mat og drikke</h1>
     <ul>
-        <li>Vi har den gode olivenolja stående på benken, og den billige rapsolja i plastflaske i en skuff. Plastflaska er rett og slett for stygg til å ha framme, men man trenger den jo rett som det er. Så da hadde det vært kjekt med en flaske vi kan helle den nøyrale billigolja over på. Den må være okay å helle fra og pen nok til at den kan stå framme. </li>
-        <li> Det kan være vanskelig å spre olje utover. Om man risler olje er det bare en liten del av maten som dekkes av olje, om man ikke bruker store mengder. De ville vært fint å kunne spraye i en del sammenhenger. F.eks. <ahref="https://evooilsprayers.com/">denne</a> hadde gjort det enkelere.</li>
-        <li>Det ryktes at boka Modernist bread (et verk i fem bind på til sammen 24 kg) har kommet i en håndterlig hjemmeutgave kalt Modernist Bread at home. Den ønsker jeg meg. Må sikkert bestilles fra amazon e.l. OBS: Det kan hende det finnes utgaver både med amerikanske og metriske mål. Her er det et must at det er metriske mål.</li>
+        <li>Vi har den gode olivenolja stående på benken, og den billige rapsolja i plastflaske i en skuff. Plastflaska er rett og slett for stygg til å ha framme, men man trenger den jo rett som det er. Så da hadde det vært kjekt med en flaske vi kan helle
+            den nøyrale billigolja over på. Den må være okay å helle fra og pen nok til at den kan stå framme. </li>
+        <li> Det kan være vanskelig å spre olje utover. Om man risler olje er det bare en liten del av maten som dekkes av olje, om man ikke bruker store mengder. De ville vært fint å kunne spraye i en del sammenhenger. F.eks. <a href="https://evooilsprayers.com/">denne</a>            hadde gjort det enkelere.</li>
+        <li> Boka Modernist bread (et verk i fem bind på til sammen 24 kg) har kommet i en håndterlig hjemmeutgave kalt Modernist Bread at home. Den ønsker jeg meg. Må sikkert bestilles fra <a href="https://www.amazon.com/Modernist-Bread-Home-Nathan-Myhrvold/dp/173799514X/">Amazon</a></li>
+        <li> Denne jerngryta er visst det anbefalte for brødbakst, de gangene man har tid til å ikke bruke brødformer. Sikkert kjekk til annen bruk også. Tung, støpejern, svart og uemaljert, så den er god på å både ta opp og gi videre varme. Fås hos <a href="https://bakerenogkokken.no/gryter-og-panner/gryter/lodge-dobbel-stopejernsgryte-473-liter/">Bakeren og kokken</a>            </li>
         <li>En flaske vin slå sjelden feil.</li>
-        <li>Av morsommere gadgets ønsker jeg meg en Searzall Pro, med en Bernz-O-Matic TS8000 brenner. Sistnevnte er rett og slett en kraftig gassbrenner. Førstnevnte er en slags metallskjerm man har foran flammen, som bidrar til at varmen spres mer og at gassen forbrenner bedre slik at man slipper den karakteristiske gassmaken. Det blir som en veldig sterk creme brulee-brenner, som man kan bruke f.eks. til å få stekeskorpe på kjøtt og fisk. Finnes normalt <a href="https://www.indiegogo.com/projects/searzall-pro#/">her</a>, men i skrivende stund ser det ut til at det ikke er mulig å bestille.</li>
+        <li>Av morsommere gadgets ønsker jeg meg en Searzall Pro, med en Bernz-O-Matic TS8000 brenner. Sistnevnte er rett og slett en kraftig gassbrenner. Førstnevnte er en slags metallskjerm man har foran flammen, som bidrar til at varmen spres mer og at
+            gassen forbrenner bedre slik at man slipper den karakteristiske gassmaken. Det blir som en veldig sterk creme brulee-brenner, som man kan bruke f.eks. til å få stekeskorpe på kjøtt og fisk. Finnes normalt <a href="https://www.indiegogo.com/projects/searzall-pro#/">her</a>,
+            men i skrivende stund ser det ut til at det ikke er mulig å bestille.</li>
     </ul>
     <h1>Opplevelser</h1>
     <ul>
-        <li>Restaurantbesøk er stort sett den typen opplevelse jeg er mest interessert i. Tidligere har det vært
-            vanskelig å få dette i gave, iallfall i form av gavekort. Men nå har mange fine restauranter funnet sammen i
-            en felles gavekortordning, <a href="https://givn.no/gavekort/oslo/restaurant">Givn</a>.</li>
+        <li>Restaurantbesøk er stort sett den typen opplevelse jeg er mest interessert i. Tidligere har det vært vanskelig å få dette i gave, iallfall i form av gavekort. Men nå har mange fine restauranter funnet sammen i en felles gavekortordning, <a href="https://givn.no/gavekort/oslo/restaurant">Givn</a>.</li>
     </ul>
     <h1>Annet</h1>
     <ul>
+        <li>Nå skal de bli mye trilling i de kommende månedene, forhåpentligvis ofte i solskinn. Da kan det være kjekt med en slik: <a href="https://www.barnashus.no/bugaboo/parasoll-black">Parasoll</a> </li>
         <li> Egentlig kan jeg jo kjøpe meg alt jeg trenger, og synes godt jeg kan få noe fra <a href="https://symbolskegaver.no/">Symbolske gaver </a>.</li>
     </ul>
 
