Rettet skrivefeil og lenker

--- a/Ønskeliste.html
+++ b/Ønskeliste.html
@@ -24,7 +24,7 @@
             blir enda bedre med de mer fancy utgavene, som for eksempel:
             <ul>
                 <li> Vanlig hvetemel gjør jobben, men det kan jo hende det blir bedre med skikkelig <a href="https://www.oluf.no/caputo-pizzamel-grano-nostrum-1-kg"> pizzamel</a></li>
-                <li> Nå for tiden har jeg ikke kapsitet til å holde en surdeig i live. Man kan få deler av samme smak med surdeigsmel som <a hrerf="https://www.oluf.no/caputo-criscito-di-casa-1-kg"> dette </a></li>
+                <li> Nå for tiden har jeg ikke kapsitet til å holde en surdeig i live. Man kan få deler av samme smak med surdeigsmel som <a href="https://www.oluf.no/caputo-criscito-di-casa-1-kg"> dette </a></li>
                 <li> Det går selvsagt fint å bake ut pizzaer med vanlig hvetemel også, men god durumhvete skal trekke litt mindre vann og dermed gjøre jobben lettere og bunnen sprøere. <a href="https://www.oluf.no/dallari-durumhvete-semolato-1-kg"> Her</a></li>
                 <li> Utvalget av krydrede spekepølser er gjerne ganske magert i nærbutikkene, men butikken som fører artiklene nevnt over har et godt utvalg av <a href="https://www.oluf.no/polser">pølser til pizza</a></li>
             </ul>
@@ -45,8 +45,8 @@
         <li> Remarkable pad 2 (eller lignende). Jeg har allerede en Kindle. Den fungerer godt til å lese ordinær tekst, men den fungerer ikke så godt til å lese mer teknisk litteratur med formler, grafer og kodesnutter. Og den er ikke god til notater og lignende.
             Så jeg har hatt lyst på en Remarkable, eller noe tilsvarende fra en annen produsent.</li>
         <li> Jeg har lenge tenkt at jeg burde lese meg opp på hva som er det beste turkjøkkenet. Men det blir jo ikke til at jeg finner tid til å sette meg inn i det. Så da blir det beste det godes fiende, og jeg kryper til korset og setter det på ønskelista
-            uten nærmere spesifikasjoner. SDet gamle rødsprits-stormkjøkkenet fungerer fint, men jeg tror det er lettere å lage god turmat til familien med en god gassbrenner og litt større kokekar. Typisk bruk er familie på tur i marka. Vekt er ikke
-            så nøye.</li>
+            uten nærmere spesifikasjoner. Det gamle rødsprits-stormkjøkkenet fungerer fint, men jeg tror det er lettere å lage god turmat til familien med en god gassbrenner og litt større kokekar. Typisk bruk er familie på tur i marka. Vekt er ikke så
+            nøye.</li>
         <li> Egentlig kan jeg jo kjøpe meg alt jeg trenger, og synes godt jeg kan få noe fra <a href="https://symbolskegaver.no/">Symbolske gaver </a>.</li>
     </ul>
 
