La til bordplater

--- a/Ønskeliste.html
+++ b/Ønskeliste.html
@@ -39,6 +39,8 @@
     </ul>
     <h1>Annet</h1>
     <ul>
+        <li> Vi har ikke forlengerplater til spisebordet. Bordet er tilrettelagt for det med uttrekkebare stokker. Man finner neppe tilpassete plater i salg, så det må nok lages. Anledninger som krever langt bord egner seg ofte også for duk, så platene kan
+            godt være mdf eller lignende. De trenger en mekanisme for å holde dem på plass. </li>
         <li> Det er en del skarpe stein og lignende både i Hvervenbukta og andre steder vi kan finne på å bade. Og når man leker med barn står man ofte på bunnen, heller enn å bare svømme. Så da kan et par badesko være lurt. Er vanligvis størrelse 43 i sko.
         </li>
         <li> Jeg har egentlig ingen typisk allværsjakke/skalljakke. Det kan være kjekt. Tiltenkt lettere turbruk og ikke alt for intensive uteaktiviteter vår og høst. Har ikke behov for noe i premium-segmentet.</li>
@@ -46,7 +48,8 @@
             Så jeg har hatt lyst på en Remarkable, eller noe tilsvarende fra en annen produsent.</li>
         <li> Jeg har lenge tenkt at jeg burde lese meg opp på hva som er det beste turkjøkkenet. Men det blir jo ikke til at jeg finner tid til å sette meg inn i det. Så da blir det beste det godes fiende, og jeg kryper til korset og setter det på ønskelista
             uten nærmere spesifikasjoner. Det gamle rødsprits-stormkjøkkenet fungerer fint, men jeg tror det er lettere å lage god turmat til familien med en god gassbrenner og litt større kokekar. Typisk bruk er familie på tur i marka. Vekt er ikke så
-            nøye.</li>
+            nøye.
+        </li>
         <li> Egentlig kan jeg jo kjøpe meg alt jeg trenger, og synes godt jeg kan få noe fra <a href="https://symbolskegaver.no/">Symbolske gaver </a>.</li>
     </ul>
 
